[package]
name = "lintel-github-action"
version = "0.0.16"
authors.workspace = true
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "github-action", "linter"]
license.workspace = true
repository.workspace = true
description = "GitHub Action support for Lintel — creates Check Runs with inline annotations"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bpaf.workspace = true
lintel-check = { version = "0.0.18", path = "../lintel-check" }
lintel-config = { version = "0.0.8", path = "../lintel-config" }
lintel-diagnostics = { version = "0.0.2", path = "../lintel-diagnostics" }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
