[package]
name = "lintel-identify"
version = "0.0.10"
authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "identification", "linter"]
license.workspace = true
repository.workspace = true
description = "Schema identification for JSON and YAML files using JSON Schema"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bpaf.workspace = true
glob-match.workspace = true
jsonschema-explain = { version = "0.2.5", path = "../jsonschema-explain" }
lintel-cli-common = { version = "0.0.5", path = "../lintel-cli-common" }
lintel-config = { version = "0.0.7", path = "../lintel-config" }
lintel-schema-cache = { version = "0.0.12", path = "../lintel-schema-cache" }
lintel-validate = { version = "0.0.7", path = "../lintel-validate" }
schema-catalog = { version = "0.0.7", path = "../schema-catalog" }
serde_json.workspace = true
terminal_size = "0.4.3"
tracing.workspace = true
