[package]
name = "lintel-identify"
version = "0.0.15"
authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "identification", "linter"]
license.workspace = true
repository.workspace = true
description = "Schema identification for JSON and YAML files using JSON Schema"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bpaf.workspace = true
lintel-cli-common = { version = "0.0.7", path = "../lintel-cli-common" }
lintel-explain = { version = "0.0.12", path = "../lintel-explain" }
tracing.workspace = true
