[package]
name = "lintel-reporters"
version = "0.0.13"
authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "linter", "reporter"]
license.workspace = true
repository.workspace = true
description = "Reporter implementations for Lintel — pretty, text, and GitHub Actions output"

[lints]
workspace = true

[dependencies]
ansi-term-styles = "0.1.0"
lintel-validate = { version = "0.0.8", path = "../lintel-validate" }
miette = { workspace = true, features = ["fancy"] }
