[package]
name = "lintel-schema-cache"
version = "0.0.9"
edition.workspace = true
authors.workspace = true
description = "Disk-backed schema cache with HTTP fetching and JSON parsing"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["json-schema", "cache", "schema"]
categories = ["caching", "development-tools"]

[lints]
workspace = true

[dependencies]
jsonschema = { version = "0.42", features = ["resolve-async"] }
tokio = { version = "1", features = ["rt", "fs", "sync"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
serde_json = "1"
async-trait = "0.1"
sha2 = "0.10"
dirs = "6"
filetime = "0.2"
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
