[package]
name = "lintel-schema-cache"
version = "0.0.10"
authors.workspace = true
categories = ["caching", "development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "cache", "schema"]
license.workspace = true
repository.workspace = true
description = "Disk-backed schema cache with HTTP fetching and JSON parsing"

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
dirs = "6"
filetime = "0.2"
jsonschema = { version = "0.42", features = ["resolve-async"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "fs", "sync"] }
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
