[package]
name = "lintel-schema-cache"
version = "0.0.11"
authors.workspace = true
categories = ["caching", "development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "cache", "schema"]
license.workspace = true
repository.workspace = true
description = "Disk-backed schema cache with HTTP fetching and JSON parsing"

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
dirs = "6.0.0"
filetime = "0.2.27"
jsonschema = { workspace = true, features = ["resolve-async"] }
reqwest.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
tokio = { workspace = true, features = ["rt", "fs", "sync"] }
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
