[package]
name = "lintel-schemastore-catalog"
version = "0.0.2"
edition.workspace = true
authors = ["Ian Macalinao <me@ianm.com>"]
description = "Mirror the SchemaStore catalog into a self-hosted git repo"
license = "Apache-2.0"
repository = "https://github.com/lintel-rs/lintel"
homepage = "https://github.com/lintel-rs/lintel"
keywords = ["json-schema", "schemastore", "catalog"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[dependencies]
schemastore = { version = "0.0.2", path = "../schemastore" }
bpaf = { version = "0.9", features = ["derive", "bright-color"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.4"
tempfile = "3"
