[package]
name = "lintel-schemastore-catalog"
version = "0.0.10"
edition.workspace = true
authors.workspace = true
description = "Mirror the SchemaStore catalog into a self-hosted git repo"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["json-schema", "schemastore", "catalog"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[dependencies]
schema-catalog = { version = "0.0.4", path = "../schema-catalog" }
schemastore = { version = "0.0.8", path = "../schemastore" }
bpaf = { version = "0.9", features = ["autocomplete", "derive", "bright-color", "docgen"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
serde_json = "1"
anyhow = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.4"
tempfile = "3"
