[package]
name = "lintel-validate"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
description = "Core validation engine for Lintel — validates JSON, YAML, TOML, JSON5, and JSONC against JSON Schema"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "yaml", "toml", "linter"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
lintel-config = { version = "0.0.4", path = "../lintel-config" }
lintel-schema-cache = { version = "0.0.8", path = "../lintel-schema-cache" }
lintel-validation-cache = { version = "0.0.6", path = "../lintel-validation-cache" }
lintel-cli-common = { version = "0.0.3", path = "../lintel-cli-common" }
jsonschema = { version = "0.42", features = ["resolve-async"] }
tokio = { version = "1", features = ["rt", "fs"] }
glob = "0.3"
glob-match = "0.2"
serde_json = "1"
anyhow = "1"
serde_yaml = "0.9"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
json5 = "1.3"
jsonc-parser = { version = "0.29", features = ["serde"] }
ignore = "0.4"
toml = "1.0"
schemastore = { version = "0.0.6", path = "../schemastore" }
tracing = "0.1"
bpaf = { version = "0.9", features = ["derive"] }

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
