[package]
name = "lintel-validate"
version = "0.0.5"
authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "yaml", "toml", "linter"]
license.workspace = true
repository.workspace = true
description = "Core validation engine for Lintel — validates JSON, YAML, TOML, JSON5, and JSONC against JSON Schema"

[lints]
workspace = true

[dependencies]
anyhow = "1"
bpaf = { version = "0.9", features = ["derive"] }
glob = "0.3"
glob-match = "0.2"
ignore = "0.4"
json5 = "1.3"
jsonc-parser = { version = "0.29", features = ["serde"] }
jsonschema = { version = "0.42", features = ["resolve-async"] }
lintel-cli-common = { version = "0.0.4", path = "../lintel-cli-common" }
lintel-config = { version = "0.0.6", path = "../lintel-config" }
lintel-schema-cache = { version = "0.0.10", path = "../lintel-schema-cache" }
lintel-validation-cache = { version = "0.0.7", path = "../lintel-validation-cache" }
miette = { version = "7", features = ["fancy"] }
schema-catalog = { version = "0.0.5", path = "../schema-catalog" }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["rt", "fs"] }
toml = "1.0"
tracing = "0.1"

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
