[package]
name = "lintel-validate"
version = "0.0.7"
authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "yaml", "toml", "linter"]
license.workspace = true
repository.workspace = true
description = "Core validation engine for Lintel — validates JSON, YAML, TOML, JSON5, and JSONC against JSON Schema"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bpaf.workspace = true
glob.workspace = true
glob-match.workspace = true
ignore.workspace = true
json5 = "1.3.1"
jsonc-parser = { version = "0.29.0", features = ["serde"] }
jsonschema = { workspace = true, features = ["resolve-async"] }
lintel-cli-common = { version = "0.0.5", path = "../lintel-cli-common" }
lintel-config = { version = "0.0.7", path = "../lintel-config" }
lintel-schema-cache = { version = "0.0.12", path = "../lintel-schema-cache" }
lintel-validation-cache = { version = "0.0.8", path = "../lintel-validation-cache" }
miette = { workspace = true, features = ["fancy"] }
schema-catalog = { version = "0.0.7", path = "../schema-catalog" }
serde_json.workspace = true
serde_yaml = "0.9.34"
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "fs"] }
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
