[package]
name = "lintel-validation-cache"
version = "0.0.6"
edition.workspace = true
authors.workspace = true
description = "Disk-backed cache for JSON Schema validation results"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["json-schema", "cache", "validation"]
categories = ["caching", "development-tools"]

[lints]
workspace = true

[dependencies]
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tokio = { version = "1", features = ["fs"] }

[dev-dependencies]
anyhow = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "fs"] }
