[package]
name = "lintel-validation-cache"
version = "0.0.7"
authors.workspace = true
categories = ["caching", "development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "cache", "validation"]
license.workspace = true
repository.workspace = true
description = "Disk-backed cache for JSON Schema validation results"

[lints]
workspace = true

[dependencies]
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs"] }

[dev-dependencies]
anyhow = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "fs"] }
