[package]
name = "lintel-validation-cache"
version = "0.0.8"
authors.workspace = true
categories = ["caching", "development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "cache", "validation"]
license.workspace = true
repository.workspace = true
description = "Disk-backed cache for JSON Schema validation results"

[lints]
workspace = true

[dependencies]
dirs = "6.0.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10.9"
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
