[package]
name = "lintel"
version = "0.0.8"
edition.workspace = true
authors.workspace = true
description = "Validate JSON and YAML files against JSON Schema"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "yaml", "linter", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[dependencies]
ansi-term-codes = { version = "0.1.0", path = "../ansi-term-codes" }
lintel-annotate = { version = "0.0.7", path = "../lintel-annotate" }
lintel-check = { version = "0.0.8", path = "../lintel-check" }
lintel-cli-common = { version = "0.0.3", path = "../lintel-cli-common" }
lintel-config = { version = "0.0.4", path = "../lintel-config" }
lintel-explain = { version = "0.0.1", path = "../lintel-explain" }
lintel-identify = { version = "0.0.4", path = "../lintel-identify" }
lintel-reporters = { version = "0.0.6", path = "../lintel-reporters" }
lintel-schema-cache = { version = "0.0.8", path = "../lintel-schema-cache" }
lintel-validate = { version = "0.0.1", path = "../lintel-validate" }
lintel-validation-cache = { version = "0.0.6", path = "../lintel-validation-cache" }
schemastore = { version = "0.0.6", path = "../schemastore" }
bpaf = { version = "0.9", features = ["autocomplete", "derive", "bright-color", "docgen"] }
glob-match = "0.2"
humantime = "2"
miette = { version = "7", features = ["fancy", "syntect-highlighter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
serde_json = "1"
serde_yaml = "0.9"
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.4"

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
