[package]
name = "lintel"
version = "0.0.12"
authors.workspace = true
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "yaml", "linter", "cli"]
license.workspace = true
repository.workspace = true
description = "Validate JSON and YAML files against JSON Schema"

[lints]
workspace = true

[dependencies]
ansi-term-styles = "0.1.0"
anyhow = "1"
bpaf = { version = "0.9", features = ["autocomplete", "derive", "bright-color", "docgen"] }
glob-match = "0.2"
humantime = "2"
lintel-annotate = { version = "0.0.11", path = "../lintel-annotate" }
lintel-check = { version = "0.0.12", path = "../lintel-check" }
lintel-cli-common = { version = "0.0.4", path = "../lintel-cli-common" }
lintel-config = { version = "0.0.6", path = "../lintel-config" }
lintel-explain = { version = "0.0.5", path = "../lintel-explain" }
lintel-format = { version = "0.0.1", path = "../lintel-format" }
lintel-identify = { version = "0.0.8", path = "../lintel-identify" }
lintel-reporters = { version = "0.0.10", path = "../lintel-reporters" }
lintel-schema-cache = { version = "0.0.10", path = "../lintel-schema-cache" }
lintel-validate = { version = "0.0.5", path = "../lintel-validate" }
lintel-validation-cache = { version = "0.0.7", path = "../lintel-validation-cache" }
miette = { version = "7", features = ["fancy", "syntect-highlighter"] }
schemastore = { version = "0.0.9", path = "../schemastore" }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.4"

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
