[package]
name = "lintel"
version = "0.0.15"
authors.workspace = true
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["json-schema", "validation", "yaml", "linter", "cli"]
license.workspace = true
repository.workspace = true
description = "Validate JSON and YAML files against JSON Schema"

[lints]
workspace = true

[dependencies]
ansi-term-styles = "0.1.0"
anyhow.workspace = true
bpaf = { workspace = true, features = ["bright-color", "docgen"] }
glob-match.workspace = true
humantime = "2.3.0"
lintel-annotate = { version = "0.0.14", path = "../lintel-annotate" }
lintel-check = { version = "0.0.15", path = "../lintel-check" }
lintel-cli-common = { version = "0.0.6", path = "../lintel-cli-common" }
lintel-config = { version = "0.0.7", path = "../lintel-config" }
lintel-explain = { version = "0.0.8", path = "../lintel-explain" }
lintel-format = { version = "0.0.3", path = "../lintel-format" }
lintel-github-action = { version = "0.0.13", path = "../lintel-github-action" }
lintel-identify = { version = "0.0.11", path = "../lintel-identify" }
lintel-reporters = { version = "0.0.13", path = "../lintel-reporters" }
lintel-schema-cache = { version = "0.0.12", path = "../lintel-schema-cache" }
lintel-validate = { version = "0.0.8", path = "../lintel-validate" }
lintel-validation-cache = { version = "0.0.8", path = "../lintel-validation-cache" }
miette = { workspace = true, features = ["fancy", "syntect-highlighter"] }
schema-catalog = { version = "0.0.8", path = "../schema-catalog" }
serde_json.workspace = true
serde_yaml = "0.9.34"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true

[dev-dependencies]
insta.workspace = true
